--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,25 @@
 Package: pj.shiny.neuropsych.gpluck
 Title: Extract Neuropsychological Test Scores
 Version: 0.0.0.9000
-Authors@R: person('Joey', 'Trampush', email = 'j.trampush@gmail.com', role = c('cre', 'aut'))
+Authors@R: 
+    person("Joey", "Trampush", , "j.trampush@gmail.com", role = c("cre", "aut"))
 Description: PKG_DESC.
 License: MIT + file LICENSE
+URL: https://github.com/brainworkup/pj.shiny.neuropsych.gpluck
+BugReports: 
+    https://github.com/brainworkup/pj.shiny.neuropsych.gpluck/issues
 Imports: 
     config,
     golem,
     shiny
+Suggests: 
+    knitr,
+    rmarkdown,
+    spelling,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 LazyData: true
-RoxygenNote: 7.1.1
-URL: https://github.com/brainworkup/pj.shiny.neuropsych.gpluck
-BugReports: https://github.com/brainworkup/pj.shiny.neuropsych.gpluck/issues
+RoxygenNote: 7.2.3.9000
+VignetteBuilder: knitr
